app/bin/test/programs/invalid/variables/NoTypeInferenceForNow.exe
foo main() -> Int = {
    let kConst = 42;
    let mut variable = ();
}
